fix issue where footer was not stretching to full width when above max-width of body

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,8 +19,6 @@ body {
 
 body {
     background-color: var(--off-white);
-    max-width: var(--max-width);
-    margin: 0 auto;
 }
 
 .row {
@@ -33,7 +31,6 @@ header {
     background-color: var(--mid-blue);
     padding: 1rem;
     display: flex;
-    height: 60px;
     font-size: 1.25rem;
     position: absolute;
     left: 0;
@@ -106,6 +103,11 @@ li a:hover {
 }
 
 /*jumbotron on index page */
+
+.jumbotron-fluid {
+    padding-top: 100px;
+}
+
 .helpus {
     background: var(--off-white) url("../images/index-hero.jpg") no-repeat center center;
     min-height: 500px;
@@ -572,7 +574,9 @@ label {
 }
 
 #content-wrap {
-  padding-bottom: 163px; 
+  padding-bottom: 163px;
+  max-width: var(--max-width);
+  margin: 0 auto;
 }
 
 @media screen and (max-width: 411px) {
